--- a/portfolio_a/package.json
+++ b/portfolio_a/package.json
@@ -14,7 +14,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "next": "^14.2.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "eslint": "^8.0.0",
